@@ -14,6 +14,7 @@ Introduction to all the key parts of trytond:
     models/fields_default_value
     domain
     pyson
+    actions
     views/index
     views/extension
     wizard
