@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
+this repository contains the full copyright notices and license terms. -->
+<tree string="Domains" sequence="sequence">
+    <field name="sequence" tree_invisible="1"/>
+    <field name="name" expand="1"/>
+</tree>
